update product controller test